--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Pull Request Templates</h1>
     <p>We are learning how to construct pull request templates</p>
     <p>let us see if it will work this time</p>
+    <p>If this one shows in master, ça veut dire que j'ai fait un autre pull request (mon deuxième avec succès)</p>
 </body>
 
 </html>
