trying to solve the issue of git continuously asking me for a password

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>If this one shows in master, ça veut dire que j'ai fait un autre pull request (mon deuxième avec succès)</p>
     <p style="font-style: bold;">If this one shows, j'aurai trouvé du succès pour la troisième fois</p>
     <p>La Quatrième fois, deuxième journée. On y va. Si ceci se montre, y'a du succès à nouveau</p>
+    <p>pause: hopefully not it will stop asking me for passwords, even though I have had SSH setup</p>
 </body>
 
 </html>
