--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p style="font-style: bold;">If this one shows, j'aurai trouvé du succès pour la troisième fois</p>
     <p>La Quatrième fois, deuxième journée. On y va. Si ceci se montre, y'a du succès à nouveau</p>
     <p>pause: hopefully not it will stop asking me for passwords, even though I have had SSH setup</p>
+    <p>OK, C'est fixé. On reprends àux pull request templates</p>
 </body>
 
 </html>
