it's not working on the SU Dev site, but it works here. why?

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>La Quatrième fois, deuxième journée. On y va. Si ceci se montre, y'a du succès à nouveau</p>
     <p>pause: hopefully not it will stop asking me for passwords, even though I have had SSH setup</p>
     <p>OK, C'est fixé. On reprends àux pull request templates</p>
+    <p>Another pull request template test</p>
 </body>
 
 </html>
