testing multiple issue templates

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>pause: hopefully not it will stop asking me for passwords, even though I have had SSH setup</p>
     <p>OK, C'est fixé. On reprends àux pull request templates</p>
     <p>Another pull request template test</p>
+    <h5>Si ça marche, Gilbert is a don, but not the adon, ça c'est Yahshua</h5>
 </body>
 
 </html>
