--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>pause: hopefully not it will stop asking me for passwords, even though I have had SSH setup</p>
     <p>OK, C'est fixé. On reprends àux pull request templates</p>
     <p>Another pull request template test</p>
+    <span>Check Check Chek One One</span>
 </body>
 
 </html>
